--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="images/Photo CV.jpg" alt="Portrait of Firstname Lastname" width="1536">
+          <img class="w-100 rounded-circle my-3" src="Photo CV.jpg" alt="Portrait of Firstname Lastname" width="1536">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
@@ -104,11 +104,11 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="../../PRJ4- Production/images/employers/trolley.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="jumbo-logo.png" alt="Company logo" width="450">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>Supermarket Employee, Supermarket chain</h4>
-                  <h5>2018</h5>
+                  <h4>Supermarket Employee, Jumbo Supermarkten</h4>
+                  <h5>2019-now</h5>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                 </div>
               </li>
@@ -129,12 +129,10 @@
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
-                  <h5>2018&nbsp;&ndash;&nbsp;now</h5>
+                  <h5>2020 –&nbsp;now</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Member of the student participation council</li>
-                    <li>Minor in resilient entrepreneurship</li>
-                    <li>Exchange with Bournemouth University</li>
+                    <li>TV department&nbsp;</li>
                   </ul>
                 </div>
               </li>
@@ -142,14 +140,13 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="../../PRJ4- Production/images/schools/school.svg" alt="School logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="694.jpeg" alt="School logo" width="694">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>High School Diploma, City High School</h4>
-                  <h5>2018</h5>
+                  <h4>&nbsp;Tourism &amp; leisure diploma, Koning Willem I College&nbsp; &nbsp;&nbsp;</h4>
+                  <h5>2016-2019</h5>
                   <ul class="biography-details list-unstyled">
-                    <li>Audiovisual media specialization</li>
-                  </ul>
+                    <li>Workplacement Mercure Hatfield Oak hotel, United Kingdom&nbsp;&nbsp;&nbsp;</li
                 </div>
               </li>
             </ul>
