--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="694.jpeg" alt="School logo" width="694">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="kw1c logo.jpeg" alt="School logo" width="694">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
-                  <h4>&nbsp;Tourism &amp; leisure diploma, Koning Willem I College&nbsp; &nbsp;&nbsp;</h4>
+                  <h4>&nbsp;Tourism &amp; leisure , Koning Willem I College&nbsp; &nbsp;&nbsp;</h4>
                   <h5>2016-2019</h5>
                   <ul class="biography-details list-unstyled">
                     <li>Workplacement Mercure Hatfield Oak hotel, United Kingdom&nbsp;&nbsp;&nbsp;</li
@@ -174,27 +174,20 @@
             -->
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
+                <a class="d-flex align-items-center" href="mailto:200790@buas.nl" target="_blank">
                   <img class="contact-icon" src="../../PRJ4- Production/images/icons/envelope.svg" alt="Email">
-                  email@buas.nl
-                </a>
+                200790@buas.nl 
+              </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
-                  <img class="contact-icon" src="../../PRJ4- Production/images/icons/facebook.svg" alt="Facebook">
-                  Facebook Profile
+                <a class="d-flex align-items-center" href="https://www.linkedin.com/in/femma-satter-30a6b814b/" target="_blank">
+                  <img class="contact-icon" src="../../PRJ4- Production/images/icons/Linkedin.svg" alt="Linkedin">
+                  Linkedin Profile
                 </a>
               </li>
-              <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
+                <a class="d-flex align-items-center" href="https://github.com/FemmaSatter" target="_blank">
                   <img class="contact-icon" src="../../PRJ4- Production/images/icons/github.svg" alt="LinkedIn">
                   GitHub Profile
-                </a>
-              </li>
-              <li class="contact-item">
-                <a class="d-flex align-items-center" href="tel:+31612345678" target="_blank">
-                  <img class="contact-icon" src="../../PRJ4- Production/images/icons/phone.svg" alt="Mobile Phone">
-                  +31 6 12345678
                 </a>
               </li>
             </ul>
@@ -231,7 +224,7 @@
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">German</h5>
+                <h5 class="language-name w-50">Spanish&nbsp;</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
                   <div class="language-progress position-absolute bg-warning h-100 w-25"></div>
@@ -257,7 +250,7 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Formula 1 Driver</li>
+              <li class="skill-item">Playing the trumpet&nbsp; &nbsp;&nbsp;&nbsp;</li>
               <li class="skill-item">Netflix Binge-Watcher</li>
             </ul>
           </section>
