--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <!--
             <section> is yet another semantic element. The first one is for professional experience.
           -->
-          <section class="my-3 biography-section">
+          <section class="my-3 biography-section" text >
             <h2>Professional Experience</h2>
             <!--
               Each list item (li) in the unordered list (ul) below will be one job.
@@ -86,7 +86,7 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="../../PRJ4- Production/images/employers/projector.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="../../PRJ4- Production/images/employers/projector.svg" alt="Company logo" width="450">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Production Assistant, Production Company</h4>
@@ -125,7 +125,7 @@
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="../../PRJ4- Production/images/schools/logo-buas.svg" alt="School logo" width="120">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="../../PRJ4- Production/images/schools/logo-buas.svg" alt="School logo" width="450">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
@@ -146,7 +146,7 @@
                   <h4>&nbsp;Tourism &amp; leisure , Koning Willem I College&nbsp; &nbsp;&nbsp;</h4>
                   <h5>2016-2019</h5>
                   <ul class="biography-details list-unstyled">
-                    <li>Workplacement Mercure Hatfield Oak hotel, United Kingdom&nbsp;&nbsp;&nbsp;</li
+                    <li>Workplacement Mercure Hatfield Oak hotel,United Kingdom&nbsp;&nbsp;&nbsp;</li>
                 </div>
               </li>
             </ul>
@@ -216,7 +216,7 @@
                 </div>
               </li>
               <li class="language-item d-flex mb-1">
-                <h5 class="language-name w-50">Spanish</h5>
+                <h5 class="language-name w-50">French</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
                   <!-- The div below is a progress bar. Choose between w-25, w-50, w-75 and w-100 to show your level of fluency -->
                   <div class="language-progress position-absolute bg-warning h-100 w-50"></div>
@@ -250,7 +250,7 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Playing the trumpet&nbsp; &nbsp;&nbsp;&nbsp;</li>
+              <li class="skill-item">Playing the trumpet<li&nbsp; &nbsp;&nbsp;&nbsp;</li>
               <li class="skill-item">Netflix Binge-Watcher</li>
             </ul>
           </section>
