--- a/Images/index.html
+++ b/Images/index.html
@@ -12,7 +12,7 @@
     <!-- -->
 
     <!-- Links to our additional CSS styles -->
-    <link rel="stylesheet" href="../Year 2/PRJ4-Brand development/PRJ4- Production/css/styles.css">
+    <link rel="stylesheet" href="../../Year 2/PRJ4-Brand development/PRJ4- Production/css/styles.css">
 
     <!-- Alternative CSS for demonstration purposes. You must deactivate the Bootstrap CSS to activate this one. -->
     <!-- 
@@ -48,7 +48,7 @@
             "w-100" makes sure the image takes the full width of the column it's in
             "rounded-circle" cuts a circle around the image
           -->
-          <img class="w-100 rounded-circle my-3" src="../Year 2/PRJ4-Brand development/GitHub/ResumePRJ4/Photo CV.jpg" alt="Portrait of Firstname Lastname" width="1536">
+          <img class="w-100 rounded-circle my-3" src="../../Year 2/PRJ4-Brand development/GitHub/ResumePRJ4/Photo CV.jpg" alt="Portrait of Firstname Lastname" width="1536">
         </div>
         <!--
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
@@ -86,7 +86,7 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="../Year 2/PRJ4-Brand development/PRJ4- Production/images/employers/projector.svg" alt="Company logo" width="450">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="../../Year 2/PRJ4-Brand development/PRJ4- Production/images/employers/projector.svg" alt="Company logo" width="450">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Production Assistant, Production Company</h4>
@@ -104,7 +104,7 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="../Year 2/PRJ4-Brand development/GitHub/ResumePRJ4/jumbo-logo.png" alt="Company logo" width="450">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="../../Year 2/PRJ4-Brand development/GitHub/ResumePRJ4/jumbo-logo.png" alt="Company logo" width="450">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Supermarket Employee, Jumbo Supermarkten</h4>
@@ -125,7 +125,7 @@
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="../Year 2/PRJ4-Brand development/PRJ4- Production/images/schools/logo-buas.svg" alt="School logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="../../Year 2/PRJ4-Brand development/PRJ4- Production/images/schools/logo-buas.svg" alt="School logo" width="450">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
@@ -140,7 +140,7 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="../Year 2/PRJ4-Brand development/GitHub/ResumePRJ4/kw1c logo.jpeg" alt="School logo" width="694">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="../../Year 2/PRJ4-Brand development/GitHub/ResumePRJ4/kw1c logo.jpeg" alt="School logo" width="694">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>&nbsp;Tourism &amp; leisure , Koning Willem I College&nbsp; &nbsp;&nbsp;</h4>
@@ -175,18 +175,18 @@
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="mailto:200790@buas.nl" target="_blank">
-                  <img class="contact-icon" src="../Year 2/PRJ4-Brand development/PRJ4- Production/images/icons/envelope.svg" alt="Email">
+                  <img class="contact-icon" src="../../Year 2/PRJ4-Brand development/PRJ4- Production/images/icons/envelope.svg" alt="Email">
                 200790@buas.nl 
               </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.linkedin.com/in/femma-satter-30a6b814b/" target="_blank">
-                  <img class="contact-icon" src="../Year 2/PRJ4-Brand development/PRJ4- Production/images/icons/Linkedin.svg" alt="Linkedin">
+                  <img class="contact-icon" src="../../Year 2/PRJ4-Brand development/PRJ4- Production/images/icons/Linkedin.svg" alt="Linkedin">
                   Linkedin Profile
                 </a>
               </li>
                 <a class="d-flex align-items-center" href="https://github.com/FemmaSatter" target="_blank">
-                  <img class="contact-icon" src="../Year 2/PRJ4-Brand development/PRJ4- Production/images/icons/github.svg" alt="LinkedIn">
+                  <img class="contact-icon" src="../../Year 2/PRJ4-Brand development/PRJ4- Production/images/icons/github.svg" alt="LinkedIn">
                   GitHub Profile
                 </a>
               </li>
