--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="../Year 2/PRJ4-Brand development/PRJ4- Production/images/employers/projector.svg" alt="Company logo" width="450">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="Images/projector.svg" alt="Company logo" width="150">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Production Assistant, Production Company</h4>
@@ -175,18 +175,18 @@
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="mailto:200790@buas.nl" target="_blank">
-                  <img class="contact-icon" src="icons/envelope.svg" alt="Email">
+                  <img src="icons/envelope.svg" alt="Email" width="20" height="20" class="contact-icon">
                 200790@buas.nl 
               </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.linkedin.com/in/femma-satter-30a6b814b/" target="_blank">
-                  <img class="contact-icon" src="icons/linkedin.svg" alt="Linkedin">
+                  <img src="icons/linkedin.svg" alt="Linkedin" width="17" height="20" class="contact-icon">
                   Linkedin Profile
                 </a>
               </li>
                 <a class="d-flex align-items-center" href="https://github.com/FemmaSatter" target="_blank">
-                  <img class="contact-icon" src="icons/github.svg" alt="LinkedIn">
+                  <img src="icons/github.svg" alt="LinkedIn" width="19" height="20" class="contact-icon">
                   GitHub Profile
                 </a>
               </li>
