--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- -->
 
     <!-- Links to our additional CSS styles -->
-    <link rel="stylesheet" href="../Year 2/PRJ4-Brand development/PRJ4- Production/css/styles.css">
+    <link rel="stylesheet" href="../ResumePRJ4/css/styles.css">
 
     <!-- Alternative CSS for demonstration purposes. You must deactivate the Bootstrap CSS to activate this one. -->
     <!-- 
@@ -189,7 +189,7 @@
                   <img src="icons/github.svg" alt="LinkedIn" width="19" height="20" class="contact-icon">
                   GitHub Profile
                 </a>
-              </li>
+              </li> 
             </ul>
           </section>
 
@@ -250,7 +250,7 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Playing the trumpet<li&nbsp; &nbsp;&nbsp;&nbsp;</li>
+              <li class="skill-item">Playing the trumpet</li>
               <li class="skill-item">Netflix Binge-Watcher</li>
             </ul>
           </section>
