--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>&nbsp;Tourism &amp; leisure , Koning Willem I College&nbsp; &nbsp;&nbsp;</h4>
                   <h5>2016-2019</h5>
-                  <ul class="biography-details list-unstyled">
                     <li>Workplacement Mercure Hatfield Oak hotel,United Kingdom&nbsp;&nbsp;&nbsp;</li>
                 </div>
               </li>
@@ -185,6 +184,7 @@
                   Linkedin Profile
                 </a>
               </li>
+			   <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://github.com/FemmaSatter" target="_blank">
                   <img src="icons/github.svg" alt="LinkedIn" width="19" height="20" class="contact-icon">
                   GitHub Profile
@@ -240,7 +240,7 @@
             <h2>Other Skills</h2>
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Team player</li>
-              <li class="skill-item">Microsoft Office Power User</li>
+              <li class="skill-item">Working under pressure</li>
               <li class="skill-item">Driving Licence</li>
             </ul>
           </section>
