--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/alternative.css">
      -->
 
-    <title>Firstname Lastname's Resumé</title>
+    <title>Femma Satter's Resumé</title>
   </head>
   <!-- End of the head -->
 
