--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
+<head>
+<base href="https://femmasatter.github.io/Resume-PRJ4/">
+	<head>
 <html class="h-100" lang="en">
   
   <!-- An HTML document always starts with a "head", i.e. information about the page that isn't directly visible -->
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Links to the CSS styles from Bootstrap. -->
@@ -13,13 +16,18 @@
 
     <!-- Links to our additional CSS styles -->
     <link rel="stylesheet" href="../ResumePRJ4/css/styles.css">
+    <style type="text/css">
+    body,td,th {
+	font-family: Montserrat, sans-serif;
+}
+    </style>
 
     <!-- Alternative CSS for demonstration purposes. You must deactivate the Bootstrap CSS to activate this one. -->
     <!-- 
     <link rel="stylesheet" href="css/alternative.css">
      -->
 
-    <title>Femma Satter's Resumé</title>
+  <title>Femma Satter's Resumé</title>
   </head>
   <!-- End of the head -->
 
