--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- -->
 
     <!-- Links to our additional CSS styles -->
-    <link rel="stylesheet" href="../ResumePRJ4/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <style type="text/css">
     body,td,th {
 	font-family: Montserrat, sans-serif;
