--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <!-- An HTML document always starts with a "head", i.e. information about the page that isn't directly visible -->
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Links to the CSS styles from Bootstrap. -->
@@ -12,19 +12,14 @@
     <!-- -->
 
     <!-- Links to our additional CSS styles -->
-    <link rel="stylesheet" href="/css/styles.css">
-    <style type="text/css">
-    body,td,th {
-	font-family: Montserrat, sans-serif;
-}
-    </style>
+    <link rel="stylesheet" href= "css/styles.css">
 
     <!-- Alternative CSS for demonstration purposes. You must deactivate the Bootstrap CSS to activate this one. -->
     <!-- 
     <link rel="stylesheet" href="css/alternative.css">
      -->
 
-  <title>Femma Satter's Resumé</title>
+    <title>Firstname Lastname's Resumé</title>
   </head>
   <!-- End of the head -->
 
@@ -184,13 +179,13 @@
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.linkedin.com/in/femma-satter-30a6b814b/" target="_blank">
-                  <img src="icons/linkedin.svg" alt="Linkedin" width="17" height="20" class="contact-icon">
+                  <img src="icons/linkedin.svg" alt="Linkedin" width="20" height="20" class="contact-icon">
                   Linkedin Profile
                 </a>
               </li>
 			   <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://github.com/FemmaSatter" target="_blank">
-                  <img src="icons/github.svg" alt="LinkedIn" width="19" height="20" class="contact-icon">
+                  <img src="icons/github.svg" alt="LinkedIn" width="20" height="20" class="contact-icon">
                   GitHub Profile
                 </a>
               </li> 
